--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"@sveltejs/adapter-cloudflare-workers": "next",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.64",
 		"@sveltejs/adapter-node": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.291",
 		"@typescript-eslint/eslint-plugin": "^4.28.3",
 		"@typescript-eslint/parser": "^4.28.3",
 		"autoprefixer": "^10.2.5",
