--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.0",
-		"@snuffydev/adapter-cloudflare-cache": "^1.0.16",
-		"@sveltejs/adapter-cloudflare": "next",
-		"@sveltejs/adapter-cloudflare-workers": "next",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.49",
-		"@sveltejs/adapter-node": "next",
+		"@sveltejs/adapter-netlify": "1.0.0-next.44",
+		"@sveltejs/adapter-node": "1.0.0-next.44",
 		"@sveltejs/kit": "1.0.0-next.288",
 		"@typescript-eslint/eslint-plugin": "^4.28.3",
 		"@typescript-eslint/parser": "^4.28.3",
